--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
 </li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/films/il-est-difficile-d-etre-un-dieu,493827.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/il-est-difficile-d-etre-un-dieu,493827.php</a>
 </li>
+<li>à voir: <a href="https://www.rottentomatoes.com/m/1007003-fahrenheit_451" rel="noopener" target="_blank">https://www.rottentomatoes.com/m/1007003-fahrenheit_451</a> (netflix)</li>
 </ul>
 <p><a href="images/affiches/brazil.jpg" target="_blank" rel="noopener noreferrer"><img src="images/affiches/brazil.jpg" alt="" style="max-width:100%;"></a></p>
 <p><a href="images/affiches/bladerunner.jpg" target="_blank" rel="noopener noreferrer"><img src="images/affiches/bladerunner.jpg" alt="" style="max-width:100%;"></a></p>
@@ -553,6 +554,7 @@
 </li>
 <li>Kairo (Japon, 2001)</li>
 <li>Saw (2004)</li>
+<li>The Descent (2005)</li>
 <li>L'Orphelinat (2007)</li>
 <li>[•REC]  (2007)</li>
 <li>The Mist (2007)</li>
@@ -873,6 +875,9 @@
 </ul>
 </li>
 <li>Le Soupirant  (1962, Pierre Etaix) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji> <a href="https://www.telerama.fr/cinema/films/le-soupirant-en-version-restauree,14179.php" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="newspaper" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4f0.png">📰</g-emoji></a> <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
+<ul>
+<li>à voir: Yoyo, Le Grand Amour</li>
+</ul>
 </li>
 <li>Lola  <a href="https://www.telerama.fr/cinema/films/lola,9759.php" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="newspaper" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4f0.png">📰</g-emoji></a>
 (1961) (et autres de Jacques Demy) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji>
@@ -1100,6 +1105,7 @@
 </h3>
 <ul>
 <li>Les Tribulations d'un Chinois en Chine (Philippe de Broca, Belmondo)</li>
+<li>à voir: <a href="https://www.telerama.fr/cinema/films/repulsion,8025.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/repulsion,8025.php</a> (Polanski)</li>
 </ul>
 <h3 id="1971">
 <a id="user-content-1971" class="anchor" href="#1971" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1971 <a href="#top">↑</a> <a href="https://fr.wikipedia.org/wiki/44e_c%C3%A9r%C3%A9monie_des_Oscars#Meilleur_film" target="_blank" rel="noopener">🏆</a> <a href="https://fr.wikipedia.org/wiki/Festival_de_Cannes_1971#S%C3%A9lection_officielle" target="_blank" rel="noopener">🌿</a>
@@ -1245,6 +1251,7 @@
 <a id="user-content-1990" class="anchor" href="#1990" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1990 <a href="#top">↑</a> <a href="https://fr.wikipedia.org/wiki/63e_c%C3%A9r%C3%A9monie_des_Oscars#Meilleur_film" target="_blank" rel="noopener">🏆</a> <a href="https://fr.wikipedia.org/wiki/16e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" target="_blank" rel="noopener">✨</a> <a href="https://fr.wikipedia.org/wiki/Festival_de_Cannes_1990#S%C3%A9lection_officielle" target="_blank" rel="noopener">🌿</a>
 </h3>
 <ul>
+<li>Sailor et Lula (Wild at Heart) (Nicolas Cage, Laura Dern)</li>
 <li>Le Mari de la coiffeuse (Jean Rochefort)</li>
 </ul>
 <h3 id="1991">
@@ -1333,7 +1340,7 @@
 </li>
 <li>Good Will Hunting (Gus van Sant)</li>
 <li>The Fifth Element (Luc Besson)</li>
-<li>Carne trémula (Javier Bardem)</li>
+<li>Carne trémula (En chair et en os) (Pedro Almodóvar, Javier Bardem)</li>
 <li>à voir: <a href="https://fr.wikipedia.org/wiki/Cure_(film,_1997)" rel="noopener" target="_blank">https://fr.wikipedia.org/wiki/Cure_(film,_1997)</a>
 </li>
 <li>La Vérité si je mens ! (José Garcia, Bruno Solo)</li>
@@ -1345,6 +1352,7 @@
 </h3>
 <ul>
 <li>Shakespeare in Love</li>
+<li>Lock, Stock and Two Smoking Barrels (Guy Ritchie, Jason Statham)</li>
 <li>à voir: Saving Private Ryan</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/24e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#C%C3%A9sar_du_meilleur_film" rel="noopener" target="_blank">Césars 24</a></p>
@@ -1360,6 +1368,7 @@
 <ul>
 <li>Ghost Dog: The Way of the Samurai <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
 </li>
+<li>Fight Club (David Fincher, Brad Pitt, Edward Norton)</li>
 <li>Matrix</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/25e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#C%C3%A9sar_du_meilleur_film" rel="noopener" target="_blank">Césars 25</a></p>
@@ -1376,6 +1385,7 @@
 <li>Gladiator <g-emoji class="g-emoji" alias="blue_heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f499.png">💙</g-emoji>
 </li>
 <li>Requiem for a Dream (Darren Aronofsky)</li>
+<li>Snatch (Guy Ritchie, Brad Pitt)</li>
 <li>Billy Elliot</li>
 <li>Dancer in the Dark (Lars von Trier)</li>
 <li>Battle Royale</li>
@@ -1437,6 +1447,7 @@
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/29e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#C%C3%A9sar_du_meilleur_film" rel="noopener" target="_blank">Césars 29</a></p>
 <ul>
+<li>à voir: <a href="https://www.telerama.fr/cinema/films/les-invasions-barbares,138876.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/les-invasions-barbares,138876.php</a> (netflix) (winner <g-emoji class="g-emoji" alias="sparkles" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2728.png">✨</g-emoji>)</li>
 <li>Stupeur et Tremblements</li>
 <li>Les Triplettes de Belleville</li>
 </ul>
@@ -1472,6 +1483,7 @@
 <li>A History of Violence (David Cronenberg)</li>
 <li>Mar adentro (Alejandro Amenábar)</li>
 <li>Broken Flowers (Jarmusch)</li>
+<li>Lord of War (Andrew Niccol, Nicolas Cage, Ethan Hawke, Jared Leto)</li>
 <li>Million Dollar Baby</li>
 <li>Capote</li>
 <li>V for Vendetta</li>
@@ -1492,7 +1504,7 @@
 </li>
 <li>La Vie des autres <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
 </li>
-<li>Little Miss Sunshine <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
+<li>Little Miss Sunshine <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> <g-emoji class="g-emoji" alias="sunny" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2600.png">☀️</g-emoji>
 </li>
 <li>Casino Royale</li>
 <li>Le Labyrinthe de Pan (Guillermo del Toro)</li>
@@ -1676,6 +1688,7 @@
 <li>The Hunt (Mads Mikkelsen)</li>
 <li>Silver Linings Playbook (Happiness Therapy) (Bradley Cooper, Jennifer Lawrence)</li>
 <li>No (Chili, Gael García Bernal)</li>
+<li>Magic Mike (Steven Soderbergh, Channing Tatum, Matthew McConaughey)</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/38e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 38</a></p>
 <ul>
@@ -1705,6 +1718,7 @@
 <li>Wrong Cops (Quentin Dupieux)</li>
 <li>Side Effects (Steven Soderbergh)</li>
 <li>The Grandmaster (Wong Kar-wai)</li>
+<li>Dallas Buyers Club (Matthew McConaughey)</li>
 <li>All is Lost (?)</li>
 <li>Ida (Pologne)</li>
 <li>American Hustle (Christian Bale, Amy Adams, Bradley Cooper, Jennifer Lawrence)</li>
@@ -1731,8 +1745,11 @@
 <li>Inherent Vice (J. Phoenix)</li>
 <li>Leviathan (Russie)</li>
 <li>A Girl Walks Home Alone at Night (Iran)</li>
+<li>Dear White People <g-emoji class="g-emoji" alias="sunny" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2600.png">☀️</g-emoji>
+</li>
 <li>Coming Home (Chine, Zhang Yimou)</li>
 <li>Noah (Darren Aronofsky, Russell Crowe)</li>
+<li>The Imitation Game (Benedict Cumberbatch)</li>
 <li>watchlist: Selma</li>
 <li>Qu'est-ce qu'on a fait au Bon Dieu ? (Christian Clavier)</li>
 <li>Babysitting (Christian Clavier)</li>
@@ -1851,6 +1868,7 @@
 <li>Bird Box (Sandra Bullock, Netflix)</li>
 <li>Annihilation (SF, Natalie Portman)</li>
 <li>Capernaum (Capharnaüm) (Liban <g-emoji class="g-emoji" alias="trophy" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3c6.png">🏆</g-emoji>)</li>
+<li>Sorry to Bother You</li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/films/las-herederas,n5687220.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/las-herederas,n5687220.php</a>
 </li>
 <li>à voir: <a href="https://www.allocine.fr/festivals/festival-124/edition-18355906/palmares/" rel="noopener" target="_blank">https://www.allocine.fr/festivals/festival-124/edition-18355906/palmares/</a>
@@ -1897,6 +1915,8 @@
 </li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/films/douleur-et-gloire,n6077398.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/douleur-et-gloire,n6077398.php</a> (Pedro Almodovar) <g-emoji class="g-emoji" alias="trophy" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3c6.png">🏆</g-emoji>
 </li>
+<li>à voir: <a href="https://www.telerama.fr/cinema/films/liberte,n6234368.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/liberte,n6234368.php</a> <g-emoji class="g-emoji" alias="herb" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f33f.png">🌿</g-emoji>
+</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/45e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 45</a></p>
 <ul>
@@ -1922,7 +1942,7 @@
 <li>Drunk (Mads Mikkelsen)</li>
 <li>L'Homme Invisible (avec Elisabeth Moss)</li>
 <li>Promising Young Woman (divertissement sympa sans plus)</li>
-<li>à voir: <a href="https://fr.wikipedia.org/wiki/Nomadland" rel="noopener" target="_blank">https://fr.wikipedia.org/wiki/Nomadland</a>
+<li>à voir: <a href="https://fr.wikipedia.org/wiki/Nomadland" rel="noopener" target="_blank">https://fr.wikipedia.org/wiki/Nomadland</a> <g-emoji class="g-emoji" alias="sunny" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2600.png">☀️</g-emoji>
 </li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/pieces-of-a-woman-sur-netflix-un-puzzle-familial-qui-vole-en-eclats-6795606.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/pieces-of-a-woman-sur-netflix-un-puzzle-familial-qui-vole-en-eclats-6795606.php</a>
 </li>
@@ -1936,11 +1956,10 @@
 </li>
 <li>à voir: <a href="https://www.rottentomatoes.com/m/waiting_for_the_barbarians_2020" rel="noopener" target="_blank">https://www.rottentomatoes.com/m/waiting_for_the_barbarians_2020</a>
 </li>
-<li>à voir: <a href="https://www.rottentomatoes.com/m/news_of_the_world" rel="noopener" target="_blank">https://www.rottentomatoes.com/m/news_of_the_world</a>
-</li>
 </ul>
 <p>Aimés sans plus:</p>
 <ul>
+<li>News of the World (Western, Tom Hanks)</li>
 <li>Tenet</li>
 <li>Sound of Metal</li>
 <li>Soul (Pixar)</li>
