--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
 <a id="user-content-vampires" class="anchor" href="#vampires" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vampires <a href="#top">↑</a>
 </h4>
 <ul>
-<li>Le Bal des Vampires  (1967, Roman Polanski) (parodique) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji> <a href="https://www.rottentomatoes.com/m/the_fearless_vampire_killers" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="tomato" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f345.png">🍅</g-emoji></a>
+<li>Le Bal des Vampires  (1967, Roman Polanski) (parodique) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji> <a href="https://www.rottentomatoes.com/m/the_fearless_vampire_killers" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="tomato" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f345.png">🍅</g-emoji></a> <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
 </li>
 <li>Nosferatu  (1922, Murnau) <a href="https://www.rottentomatoes.com/m/nosferatu" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="tomato" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f345.png">🍅</g-emoji></a>
 </li>
@@ -612,7 +612,7 @@
 </h4>
 <ul>
 <li>Danse avec les Loups  <a href="https://www.rottentomatoes.com/m/dances_with_wolves" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="tomato" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f345.png">🍅</g-emoji></a>
-(de et avec Kevin Costner, Oscar meilleur film 1991) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji>
+(de et avec Kevin Costner, 7<g-emoji class="g-emoji" alias="trophy" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3c6.png">🏆</g-emoji> meilleur film 1991) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji>
 </li>
 <li>There Will Be Blood   (2007, P.T. Anderson, avec Daniel Day Lewis) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji> <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> <a href="https://www.rottentomatoes.com/m/there_will_be_blood" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="tomato" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f345.png">🍅</g-emoji></a>
 </li>
@@ -642,7 +642,7 @@
 </li>
 <li>
 <p>Impitoyable  <a href="https://www.rottentomatoes.com/m/1041911-unforgiven" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="tomato" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f345.png">🍅</g-emoji></a>
-(Clint Eastwood, <g-emoji class="g-emoji" alias="trophy" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3c6.png">🏆</g-emoji> meilleur film 1992)</p>
+(Clint Eastwood, 4<g-emoji class="g-emoji" alias="trophy" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3c6.png">🏆</g-emoji> meilleur film 1992)</p>
 </li>
 </ul>
 <h4 id="néowesterns">
@@ -670,17 +670,19 @@
 <a id="user-content-animés" class="anchor" href="#anim%C3%A9s" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Animés <a href="#top">↑</a>
 </h3>
 <ul>
-<li>La plupart des Miyasaki <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
+<li>La plupart des Hayao Miyasaki <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
 <ul>
 <li>Princesse Mononoke</li>
 <li>Nausicaa de la Vallée du Vent</li>
 <li>Le Tombeau des Lucioles</li>
 <li>Le Chateau dans le Ciel</li>
 <li>Le Chateau Ambulant</li>
+<li>Le Voyage de Chihiro</li>
 <li>...</li>
 </ul>
 </li>
-<li>Ghost in the Shell (le film, pas la série), le 2e film aussi</li>
+<li>Ghost in the Shell (1995)</li>
+<li>Ghost in the Shell 2: Innocence (2004)</li>
 </ul>
 <h3 id="vieux-classiques-noir-et-blanc">
 <a id="user-content-vieux-classiques-noir-et-blanc" class="anchor" href="#vieux-classiques-noir-et-blanc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vieux classiques (noir et blanc) <a href="#top">↑</a>
@@ -905,6 +907,7 @@
 <li>12 Monkeys</li>
 <li>Sacré Graal</li>
 </ul>
+<p>Voir <a href="https://www.youtube.com/watch?v=CAKS3rdYTpI" rel="noopener" target="_blank">ici</a> un commentaire de Terry Gilliam sur Spielberg</p>
 <h3 id="jeanluc-godard">
 <a id="user-content-jean-luc-godard" class="anchor" href="#jean-luc-godard" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Jean-Luc Godard <a href="#top">↑</a>
 </h3>
@@ -1056,22 +1059,91 @@
 <li>Le Tigre du Bengale</li>
 <li>Le Tombeau Hindou</li>
 </ul>
-<h3 id="et-aussi">
-<a id="user-content-et-aussi" class="anchor" href="#et-aussi" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Et aussi... <a href="#top">↑</a>
+<h3 id="john-carpenter-nanars-de-qualité">
+<a id="user-content-john-carpenter-nanars-de-qualité" class="anchor" href="#john-carpenter-nanars-de-qualit%C3%A9" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>John Carpenter (nanars de qualité) <a href="#top">↑</a>
 </h3>
 <ul>
-<li>Darren Arronovski (Requiem for a Dream, Black Swan, The Wrestler...)</li>
-<li>David Lynch (Elephant Man, Mulholland Drive, Blue Velvet...)</li>
-<li>Almodovar (Volver, Femmes au bord de la crise de nerfs, Todo sobre my madre...)</li>
-<li>Peter Weier (Witness, Dead Poets Society, Etat Second...)</li>
-<li>Kenneth Brannagh (Le Limier, Beaucoup de Bruit pour rien, Dead Again...)</li>
-<li>Takeshi Kitano (Aniki mon Frère, Hana-Bi)</li>
-<li>Zhang Yimou (Hero, La Cité Interdite, Le Secret des Poignards Volants...)</li>
-<li>Tarentino (Inglorious Basterds, Pulp Fiction, Kill Bill, Reservoir Dogs...)</li>
-<li>Robert Rodriguez (Machete, Sin City, From Dusk till Dawn)</li>
-<li>Hayao Miyasaki (Princesse Mononoke, Le Chateau Ambulant, Nausicaa, Le Chateau dans le Ciel, Le Voyage de Chihiro...)</li>
+<li>Escape from New York (1981)</li>
+<li>The Thing (1982)</li>
+<li>They Live (1988)</li>
 </ul>
-<p>Voir <a href="https://www.youtube.com/watch?v=CAKS3rdYTpI" rel="noopener" target="_blank">ici</a> un commentaire de Terry Gilliam sur Spielberg</p>
+<h3 id="darren-arronovski">
+<a id="user-content-darren-arronovski" class="anchor" href="#darren-arronovski" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Darren Arronovski <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Requiem for a Dream</li>
+<li>Black Swan</li>
+<li>The Wrestler</li>
+</ul>
+<h3 id="david-lynch">
+<a id="user-content-david-lynch" class="anchor" href="#david-lynch" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>David Lynch <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Elephant Man</li>
+<li>Mulholland Drive</li>
+<li>Blue Velvet</li>
+</ul>
+<h3 id="almodovar">
+<a id="user-content-almodovar" class="anchor" href="#almodovar" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Almodovar <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Volver</li>
+<li>Femmes au bord de la crise de nerfs</li>
+<li>Todo sobre my madre</li>
+</ul>
+<h3 id="peter-weier">
+<a id="user-content-peter-weier" class="anchor" href="#peter-weier" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Peter Weier <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Witness</li>
+<li>Dead Poets Society</li>
+<li>Etat Second</li>
+</ul>
+<h3 id="kenneth-brannagh">
+<a id="user-content-kenneth-brannagh" class="anchor" href="#kenneth-brannagh" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Kenneth Brannagh <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Le Limier</li>
+<li>Beaucoup de Bruit pour rien</li>
+<li>Dead Again</li>
+</ul>
+<h3 id="takeshi-kitano">
+<a id="user-content-takeshi-kitano" class="anchor" href="#takeshi-kitano" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Takeshi Kitano <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Aniki mon Frère</li>
+<li>Hana-Bi</li>
+</ul>
+<h3 id="zhang-yimou-artsmartiaux-chinois">
+<a id="user-content-zhang-yimou-arts-martiaux-chinois" class="anchor" href="#zhang-yimou-arts-martiaux-chinois" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Zhang Yimou (arts-martiaux chinois) <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Hero</li>
+<li>La Cité Interdite</li>
+<li>Le Secret des Poignards Volants</li>
+<li>à voir: <a href="https://www.telerama.fr/cinema/films/epouses-et-concubines,8965.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/epouses-et-concubines,8965.php</a>
+</li>
+</ul>
+<h3 id="tarentino">
+<a id="user-content-tarentino" class="anchor" href="#tarentino" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tarentino <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Inglorious Basterds</li>
+<li>Pulp Fiction (1994) <a href="https://www.youtube.com/watch?v=1nZmRsyAX44" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="herb" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f33f.png">🌿</g-emoji></a>
+</li>
+<li>Les Huit Salopards</li>
+<li>Kill Bill</li>
+<li>Reservoir Dogs</li>
+<li>Boulevard de la Mort (Death Proof)</li>
+</ul>
+<h3 id="robert-rodriguez">
+<a id="user-content-robert-rodriguez" class="anchor" href="#robert-rodriguez" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Robert Rodriguez <a href="#top">↑</a>
+</h3>
+<ul>
+<li>Machete</li>
+<li>Sin City</li>
+<li>From Dusk till Dawn</li>
+</ul>
 <h2 id="par-année-de-sortie">
 <a id="user-content-par-année-de-sortie" class="anchor" href="#par-ann%C3%A9e-de-sortie" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Par année de sortie <a href="#top">↑</a>
 </h2>
@@ -1144,6 +1216,12 @@
 </li>
 <li>Un éléphant ça trompe énormément (Jean Rochefort)</li>
 <li>Le Juge et l'Assassin (Bertrand Tavernier, Philippe Noiret, Michel Galabru)</li>
+</ul>
+<h3 id="1977">
+<a id="user-content-1977" class="anchor" href="#1977" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1977 <a href="#top">↑</a> <a href="https://fr.wikipedia.org/wiki/50e_c%C3%A9r%C3%A9monie_des_Oscars#Meilleur_film" target="_blank" rel="noopener">🏆</a> <a href="https://fr.wikipedia.org/wiki/3e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" target="_blank" rel="noopener">✨</a> <a href="https://fr.wikipedia.org/wiki/Festival_de_Cannes_1977#S%C3%A9lection_officielle" target="_blank" rel="noopener">🌿</a>
+</h3>
+<ul>
+<li>à voir: Eraserhead (David Lynch)</li>
 </ul>
 <h3 id="1979">
 <a id="user-content-1979" class="anchor" href="#1979" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>1979 <a href="#top">↑</a> <a href="https://fr.wikipedia.org/wiki/52e_c%C3%A9r%C3%A9monie_des_Oscars#Meilleur_film" target="_blank" rel="noopener">🏆</a> <a href="https://fr.wikipedia.org/wiki/5e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" target="_blank" rel="noopener">✨</a> <a href="https://fr.wikipedia.org/wiki/Festival_de_Cannes_1979#S%C3%A9lection_officielle" target="_blank" rel="noopener">🌿</a>
@@ -1341,7 +1419,7 @@
 <li>Good Will Hunting (Gus van Sant)</li>
 <li>The Fifth Element (Luc Besson)</li>
 <li>Carne trémula (En chair et en os) (Pedro Almodóvar, Javier Bardem)</li>
-<li>à voir: <a href="https://fr.wikipedia.org/wiki/Cure_(film,_1997)" rel="noopener" target="_blank">https://fr.wikipedia.org/wiki/Cure_(film,_1997)</a>
+<li>Cure (Japon, Kiyoshi Kurosawa) <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji>
 </li>
 <li>La Vérité si je mens ! (José Garcia, Bruno Solo)</li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/films/cold-fever,31483.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/cold-fever,31483.php</a>
@@ -1353,6 +1431,7 @@
 <ul>
 <li>Shakespeare in Love</li>
 <li>Lock, Stock and Two Smoking Barrels (Guy Ritchie, Jason Statham)</li>
+<li>Kirikou et la Sorcière</li>
 <li>à voir: Saving Private Ryan</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/24e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#C%C3%A9sar_du_meilleur_film" rel="noopener" target="_blank">Césars 24</a></p>
@@ -1464,6 +1543,7 @@
 <li>La Mauvaise Éducation (Pedro Almodóvar)</li>
 <li>Mystic River (Clint Eastwood)</li>
 <li>Aviator</li>
+<li>Carnets de voyage (Diarios de motocicleta) (Gael García Bernal)</li>
 <li>Crazy Kung-Fu (Stephen Chow)</li>
 <li>Troie</li>
 <li>The Passion of the Christ (Mel Gibson) (vu ?)</li>
@@ -1723,9 +1803,12 @@
 <li>Ida (Pologne)</li>
 <li>American Hustle (Christian Bale, Amy Adams, Bradley Cooper, Jennifer Lawrence)</li>
 <li>The Lunchbox (Inde)</li>
-<li>à voir: Nosotros los Nobles</li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/39e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 39</a></p>
+<p>Bof:</p>
+<ul>
+<li>Nosotros los Nobles (Mexique)</li>
+</ul>
 <h3 id="2014">
 <a id="user-content-2014" class="anchor" href="#2014" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2014 <a href="#top">↑</a> <a href="https://fr.wikipedia.org/wiki/87e_c%C3%A9r%C3%A9monie_des_Oscars#Meilleur_film" target="_blank" rel="noopener">🏆</a> <a href="https://fr.wikipedia.org/wiki/40e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" target="_blank" rel="noopener">✨</a> <a href="https://fr.wikipedia.org/wiki/Festival_de_Cannes_2014#S%C3%A9lection_officielle" target="_blank" rel="noopener">🌿</a> <a href="https://fr.wikipedia.org/wiki/29e_c%C3%A9r%C3%A9monie_des_Goyas#Meilleur_film" target="_blank" rel="noopener">🇪🇸</a>
 </h3>
@@ -1845,9 +1928,10 @@
 <ul>
 <li>120 battements par minute <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
 </li>
-<li>Le Brio (bon, pas inoubliable)</li>
-<li>à voir: <a href="https://www.telerama.fr/cinema/films/la-douleur,516794.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/la-douleur,516794.php</a>
+<li>La Douleur <g-emoji class="g-emoji" alias="movie_camera" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f3a5.png">🎥</g-emoji> <g-emoji class="g-emoji" alias="heart" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji>
+<a href="https://www.telerama.fr/cinema/films/la-douleur,516794.php" rel="noopener" target="_blank"><g-emoji class="g-emoji" alias="newspaper" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f4f0.png">📰</g-emoji></a>
 </li>
+<li>Le Brio (bon, pas inoubliable)</li>
 </ul>
 <p>Ok sans plus:</p>
 <ul>
@@ -1941,9 +2025,6 @@
 </li>
 <li>Drunk (Mads Mikkelsen)</li>
 <li>L'Homme Invisible (avec Elisabeth Moss)</li>
-<li>Promising Young Woman (divertissement sympa sans plus)</li>
-<li>à voir: <a href="https://fr.wikipedia.org/wiki/Nomadland" rel="noopener" target="_blank">https://fr.wikipedia.org/wiki/Nomadland</a> <g-emoji class="g-emoji" alias="sunny" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2600.png">☀️</g-emoji>
-</li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/pieces-of-a-woman-sur-netflix-un-puzzle-familial-qui-vole-en-eclats-6795606.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/pieces-of-a-woman-sur-netflix-un-puzzle-familial-qui-vole-en-eclats-6795606.php</a>
 </li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/festival-de-deauville-the-nest-triomphe-giants-being-lovely-envoute-et-minari-seduit-6696521.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/festival-de-deauville-the-nest-triomphe-giants-being-lovely-envoute-et-minari-seduit-6696521.php</a>
@@ -1952,13 +2033,14 @@
 </li>
 <li>à voir: <a href="https://www.telerama.fr/cinema/films/adn,n6671621.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/adn,n6671621.php</a> <g-emoji class="g-emoji" alias="herb" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/1f33f.png">🌿</g-emoji>
 </li>
-<li>à voir: <a href="https://www.telerama.fr/cinema/films/adieu-les-cons,n6630533.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/adieu-les-cons,n6630533.php</a>
-</li>
 <li>à voir: <a href="https://www.rottentomatoes.com/m/waiting_for_the_barbarians_2020" rel="noopener" target="_blank">https://www.rottentomatoes.com/m/waiting_for_the_barbarians_2020</a>
 </li>
 </ul>
 <p>Aimés sans plus:</p>
 <ul>
+<li>Nomadland (Frances McDormand) <g-emoji class="g-emoji" alias="sunny" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2600.png">☀️</g-emoji>
+</li>
+<li>Promising Young Woman (divertissement sympa sans plus)</li>
 <li>News of the World (Western, Tom Hanks)</li>
 <li>Tenet</li>
 <li>Sound of Metal</li>
@@ -1967,12 +2049,15 @@
 </li>
 </ul>
 <p><a href="https://fr.wikipedia.org/wiki/46e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar#Meilleur_film" rel="noopener" target="_blank">Césars 46</a></p>
+<ul>
+<li>à voir: <a href="https://www.telerama.fr/cinema/films/adieu-les-cons,n6630533.php" rel="noopener" target="_blank">https://www.telerama.fr/cinema/films/adieu-les-cons,n6630533.php</a> 7<g-emoji class="g-emoji" alias="sparkles" fallback-src="https://github.githubassets.com/images/icons/emoji/unicode/2728.png">✨</g-emoji>
+</li>
+</ul>
 <h3 id="2021">
 <a id="user-content-2021" class="anchor" href="#2021" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>2021 <a href="#top">↑</a> <a href="https://fr.wikipedia.org/wiki/Festival_de_Cannes_2021#S%C3%A9lection_officielle" target="_blank" rel="noopener">🌿</a> <a href="https://fr.wikipedia.org/wiki/36e_c%C3%A9r%C3%A9monie_des_Goyas#Meilleur_film" target="_blank" rel="noopener">🇪🇸</a>
 </h3>
 <ul>
-<li>à voir: <a href="https://www.rottentomatoes.com/m/judas_and_the_black_messiah" rel="noopener" target="_blank">https://www.rottentomatoes.com/m/judas_and_the_black_messiah</a>
-</li>
+<li>Judas and the Black Messiah</li>
 <li>à voir: <a href="https://fr.wikipedia.org/wiki/Dune_(film,_2021)" rel="noopener" target="_blank">https://fr.wikipedia.org/wiki/Dune_(film,_2021)</a>
 </li>
 </ul>
