small fix script

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 <p><a href="https://fr.wikipedia.org/wiki/8e_c%C3%A9r%C3%A9monie_des_C%C3%A9sar" rel="noopener" target="_blank">Césars 8</a></p>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//az5XParmpea0fxAjwEgHpUrXzw0.jpg");' onmouseleave='setPosterPath("");'>Danton (Andrzej Wajda, Depardieu) ❤️</li>
-<li>Le père Noël est une ordure</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jVFR1j0zUgRhgGDS26zHzXHBXVV.jpg");' onmouseleave='setPosterPath("");'>Le père Noël est une ordure</li>
 </ul>
 <h3 id="1983">
 <a id="user-content-1983" class="anchor" aria-hidden="true" tabindex="-1" href="#1983"><span aria-hidden="true" class="octicon octicon-link"></span></a>1983 <a href="#top">↑</a>
@@ -2201,7 +2201,7 @@
 <a id="user-content-comédies-françaises" class="anchor" aria-hidden="true" tabindex="-1" href="#com%C3%A9dies-fran%C3%A7aises"><span aria-hidden="true" class="octicon octicon-link"></span></a>Comédies françaises <a href="#top">↑</a>
 </h2>
 <ul>
-<li>Le père Noël est une ordure (1982, Christian Clavier, Thierry Lhermitte) 💙 #film-de-noel</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jVFR1j0zUgRhgGDS26zHzXHBXVV.jpg");' onmouseleave='setPosterPath("");'>Le père Noël est une ordure (1982, Christian Clavier, Thierry Lhermitte) 💙 #film-de-noel</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//tjHn19RpFMBmzQx58SBO40nLvhu.jpg");' onmouseleave='setPosterPath("");'>Le bonheur est dans le pré (1995)</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//jCOCdWIim6upzteYswh8BpcsKWg.jpg");' onmouseleave='setPosterPath("");'>Le Diner de Cons (1997, avec Jacques Villeret) 💙 <a href="https://www.telerama.fr/cinema/films/le-diner-de-cons,43753.php" rel="noopener" target="_blank">📰</a>
 </li>
