fix typo in movie name

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
 </h3>
 <ul>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//2o1oe54a4doiwB4uJq9Kx1RHal0.jpg");' onmouseleave='setPosterPath("");'>Le Procès (Orson Welles) 🎥 ❤️ #film-de-procès</li>
-<li>Laurence d'Arabie (David Lean, avec Peter O'Toole) <a href="https://www.rottentomatoes.com/m/lawrence_of_arabia" rel="noopener" target="_blank">🍅</a> #aventure</li>
+<li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//mhCYpRMtvCxxu8UsCKHWCTcTpcX.jpg");' onmouseleave='setPosterPath("");'>Lawrence d'Arabie (David Lean, avec Peter O'Toole) <a href="https://www.rottentomatoes.com/m/lawrence_of_arabia" rel="noopener" target="_blank">🍅</a> #aventure</li>
 <li onmouseover='setPosterPath("https://image.tmdb.org/t/p/original//muCMEJrYw6B06Zttn879nYtCGvS.jpg");' onmouseleave='setPosterPath("");'>Le Jour le plus long (John Wayne, Robert Mitchum, Richard Burton, Henry Fonda, Bourvil) #ww2</li>
 </ul>
 <p>Français:</p>
