add country-based stats

--- a/index.html
+++ b/index.html
@@ -197,7 +197,53 @@
 </ul>
 <div class="markdown-heading">
 <h2 class="heading-element">Tips</h2>
-<a id="user-content-tips" class="anchor" aria-label="Permalink: Tips" href="#tips"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+<span><details>
+  <summary>Films vu par pays</summary>
+  (n'inclut pas les films américains et français, vus en grand nombre)
+  <pre style="font-size: 20px;line-height: 32px;">🇯🇵 ██████████████████████████ 26
+🇬🇧 █████████████████████ 21
+🇪🇸 █████████████████ 17
+🇩🇪 ██████████████ 14
+🇰🇷 ██████████ 10
+🇮🇹 ██████████ 10
+🇷🇺 ███████ 7
+🇲🇽 ██████ 6
+🇩🇰 ██████ 6
+🇹🇷 █████ 5
+🇭🇰 █████ 5
+🇨🇳 █████ 5
+🇸🇪 ████ 4
+🇮🇳 ████ 4
+🇵🇱 ███ 3
+🇮🇷 ███ 3
+🇹🇭 ██ 2
+🇦🇷 ██ 2
+🇨🇱 ██ 2
+🇮🇸 ██ 2
+🇫🇮 █ 1
+🇳🇴 █ 1
+🇺🇾 █ 1
+🇧🇹 █ 1
+🇦🇹 █ 1
+🇮🇪 █ 1
+🇧🇪 █ 1
+🇱🇧 █ 1
+🇸🇬 █ 1
+🇦🇺 █ 1
+🇳🇿 █ 1
+🇬🇪 █ 1
+🇨🇦 █ 1
+🇬🇷 █ 1
+🇿🇦 █ 1
+🇮🇱 █ 1
+🇰🇿 █ 1
+🇷🇴 █ 1
+🇵🇪 █ 1
+🇨🇴 █ 1
+🇧🇷 █ 1
+🇮🇩 █ 1</pre>
+</details>
+</span><a id="user-content-tips" class="anchor" aria-label="Permalink: Tips" href="#tips"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </div>
 <details>
 <summary>Où voir des films</summary>
