add year-based stats

--- a/index.html
+++ b/index.html
@@ -197,53 +197,7 @@
 </ul>
 <div class="markdown-heading">
 <h2 class="heading-element">Tips</h2>
-<span><details>
-  <summary>Films vu par pays</summary>
-  (n'inclut pas les films américains et français, vus en grand nombre)
-  <pre style="font-size: 20px;line-height: 32px;">🇯🇵 ██████████████████████████ 26
-🇬🇧 █████████████████████ 21
-🇪🇸 █████████████████ 17
-🇩🇪 ██████████████ 14
-🇰🇷 ██████████ 10
-🇮🇹 ██████████ 10
-🇷🇺 ███████ 7
-🇲🇽 ██████ 6
-🇩🇰 ██████ 6
-🇹🇷 █████ 5
-🇭🇰 █████ 5
-🇨🇳 █████ 5
-🇸🇪 ████ 4
-🇮🇳 ████ 4
-🇵🇱 ███ 3
-🇮🇷 ███ 3
-🇹🇭 ██ 2
-🇦🇷 ██ 2
-🇨🇱 ██ 2
-🇮🇸 ██ 2
-🇫🇮 █ 1
-🇳🇴 █ 1
-🇺🇾 █ 1
-🇧🇹 █ 1
-🇦🇹 █ 1
-🇮🇪 █ 1
-🇧🇪 █ 1
-🇱🇧 █ 1
-🇸🇬 █ 1
-🇦🇺 █ 1
-🇳🇿 █ 1
-🇬🇪 █ 1
-🇨🇦 █ 1
-🇬🇷 █ 1
-🇿🇦 █ 1
-🇮🇱 █ 1
-🇰🇿 █ 1
-🇷🇴 █ 1
-🇵🇪 █ 1
-🇨🇴 █ 1
-🇧🇷 █ 1
-🇮🇩 █ 1</pre>
-</details>
-</span><a id="user-content-tips" class="anchor" aria-label="Permalink: Tips" href="#tips"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+<a id="user-content-tips" class="anchor" aria-label="Permalink: Tips" href="#tips"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </div>
 <details>
 <summary>Où voir des films</summary>
@@ -353,7 +307,142 @@
 <a href="https://framed.wtf/" rel="noopener" target="_blank">framed.wtf</a>: wordle pour les films</li>
 </ul>
 <div class="markdown-heading">
-<h2 class="heading-element">Mon top 15 films préférés</h2>
+<span><details>
+  <summary>Statistiques: films vu par pays</summary>
+  (n'inclut pas les films américains et français, vus en grand nombre)
+  <pre style="font-size: 20px;line-height: 32px;">🇯🇵 ██████████████████████████ 26
+🇬🇧 █████████████████████ 21
+🇪🇸 █████████████████ 17
+🇩🇪 ██████████████ 14
+🇰🇷 ██████████ 10
+🇮🇹 ██████████ 10
+🇷🇺 ███████ 7
+🇲🇽 ██████ 6
+🇩🇰 ██████ 6
+🇹🇷 █████ 5
+🇭🇰 █████ 5
+🇨🇳 █████ 5
+🇸🇪 ████ 4
+🇮🇳 ████ 4
+🇵🇱 ███ 3
+🇮🇷 ███ 3
+🇹🇭 ██ 2
+🇦🇷 ██ 2
+🇨🇱 ██ 2
+🇮🇸 ██ 2
+🇫🇮 █ 1
+🇳🇴 █ 1
+🇺🇾 █ 1
+🇧🇹 █ 1
+🇦🇹 █ 1
+🇮🇪 █ 1
+🇧🇪 █ 1
+🇱🇧 █ 1
+🇸🇬 █ 1
+🇦🇺 █ 1
+🇳🇿 █ 1
+🇬🇪 █ 1
+🇨🇦 █ 1
+🇬🇷 █ 1
+🇿🇦 █ 1
+🇮🇱 █ 1
+🇰🇿 █ 1
+🇷🇴 █ 1
+🇵🇪 █ 1
+🇨🇴 █ 1
+🇧🇷 █ 1
+🇮🇩 █ 1</pre>
+</details>
+</span><span><details>
+  <summary>Statistiques: films vu par année</summary>
+  <pre style="font-size: 10px;line-height: 16px;">1921: █ 1
+1922: █ 1
+1927: ██ 2
+1928: █ 1
+1929: █ 1
+1931: █ 1
+1940: █ 1
+1941: █ 1
+1942: █ 1
+1946: █ 1
+1948: ███ 3
+1949: █ 1
+1951: ██ 2
+1953: █ 1
+1954: █ 1
+1956: █ 1
+1957: ██ 2
+1958: ██ 2
+1959: ████ 4
+1960: ██████ 6
+1961: ███ 3
+1962: ████████ 8
+1963: ████ 4
+1964: ████ 4
+1965: ██████ 6
+1966: █████ 5
+1967: ████ 4
+1968: ████ 4
+1969: ████ 4
+1970: █████ 5
+1971: ████████ 8
+1972: ██████ 6
+1973: ███████ 7
+1974: ████████ 8
+1975: ███████████ 11
+1976: ████████ 8
+1977: ██████ 6
+1978: ██████ 6
+1979: █████████ 9
+1980: █████ 5
+1981: ██████████ 10
+1982: ███████████ 11
+1983: ███████ 7
+1984: ██████████ 10
+1985: ███████████ 11
+1986: █████████ 9
+1987: █████████ 9
+1988: ████████████ 12
+1989: ███████ 7
+1990: █████████ 9
+1991: ████████ 8
+1992: █████████ 9
+1993: ██████████████ 14
+1994: ███████████████ 15
+1995: ██████████████████ 18
+1996: █████████ 9
+1997: ████████████████████ 20
+1998: ██████████ 10
+1999: ███████████████████ 19
+2000: █████████████████ 17
+2001: █████████████ 13
+2002: ██████████████ 14
+2003: █████████████████ 17
+2004: ███████████████████████████ 27
+2005: ██████████████████████ 22
+2006: ██████████████████████████ 26
+2007: ███████████████████████ 23
+2008: ████████████████████████████ 28
+2009: ███████████████████████████ 27
+2010: █████████████████████████████ 29
+2011: ██████████████████████████████ 30
+2012: ████████████████████████ 24
+2013: ███████████████████████████████████ 35
+2014: █████████████████████████████████ 33
+2015: ███████████████████ 19
+2016: █████████████████████████ 25
+2017: ██████████████████████████ 26
+2018: ██████████████████████████████████ 34
+2019: █████████████████████████████ 29
+2020: █████████████████ 17
+2021: ████████████████████████ 24
+2022: ████████████████████████████████ 32
+2023: ███████████████████████████████████████████████████ 51
+2024:  0
+
+total: 994</pre>
+</details>
+</span><h2 class="heading-element">Mon top 15 films préférés</h2>
 <a id="user-content-mon-top-15-films-préférés" class="anchor" aria-label="Permalink: Mon top 15 films préférés" href="#mon-top-15-films-pr%C3%A9f%C3%A9r%C3%A9s"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </div>
 <ul>
